--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,29 +6,29 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="{{site_url}}/"><img src="{{site.baseurl}}/images/profile.svg" alt="Gergely Polonkai" style="background-color: white; height: 45px; margin-top: -13px;"></a>
+                        <a class="navbar-brand" href="{{'/' | prepend: site.baseurl}}"><img src="{{'/images/profile.svg' | prepend: site.baseurl}}" alt="Gergely Polonkai" style="background-color: white; height: 45px; margin-top: -13px;"></a>
                     </div>
                     <div class="collapse navbar-collapse" id="gp-navbar">
                         <ul class="nav navbar-nav">
-                            <li><a href="{{site_url}}/about">About me</a></li>
-                            <li><a href="{{site_url}}/blog">Blog</a></li>
-                            <li><a href="{{site_url}}/resume">Resume</a></li>
+                            <li><a href="{{'/about' | prepend: site.baseurl}}">About me</a></li>
+                            <li><a href="{{'/blog' | prepend: site.baseurl}}">Blog</a></li>
+                            <li><a href="{{'/resume' | prepend: site.baseurl}}">Resume</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="{{site_url}}/disclaimer">Disclaimer</a></li>
+                            <li><a href="{{'/disclaimer' | prepend: site.baseurl}}">Disclaimer</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-pencil"></span> Contact me <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="mailto:gergely@polonkai.eu" target="_blank"><img src="{{site_url}}/images/email_16.png" alt="" /> E-mail</a></li>
-                                    <li><a href="http://www.linkedin.com/in/gergelypolonkai" target="_blank"><img src="{{site_url}}/images/linkedin_16.png" alt="" /> LinkedIn</a></li>
-                                    <li><a href="skype:gergely.polonkai" target="_blank"><img src="{{site_url}}/images/skype_16.png" alt="" /> Skype</a></li>
-                                    <li><a href="http://facebook.com/Polesz" target="_blank"><img src="{{site_url}}/images/facebook_16.png" alt="" /> Facebook</a></li>
-                                    <li><a href="https://plus.google.com/+GergelyPolonkai/about" target="_blank"><img src="{{site_url}}/images/google_plus_16.png" alt="" /> Google+</a></li>
-                                    <li><a href="gtalk:chat?jid=gergely@polonkai.eu" target="_blank"><img src="{{site_url}}/images/googletalk_16.png" alt="" /> Hangouts</a></li>
-                                    <li><a href="http://twitter.com/GergelyPolonkai" target="_blank"><img src="{{site_url}}/images/twitter_16.png" alt="" /> Twitter</a></li>
-                                    <li><a href="http://gergelypolonkai.tumblr.com" target="_blank"><img src="{{site_url}}/images/tumblr_16.png" alt="" /> Tumblr</a></li>
-                                    <li><a href="http://gergelypolonkai.deviantart.com" target="_blank"><img src="{{site_url}}/images/deviantart_16.png" alt="" /> deviantArt</a></li>
-                                    <li><a href="{{site_url}}/blog/atom.xml"><img src="{{site_url}}/images/rss_16.png" alt="" /> RSS Feed</a></li>
+                                    <li><a href="mailto:gergely@polonkai.eu" target="_blank"><img src="{{'/images/email_16.png' | prepend: site.baseurl}}" alt="" /> E-mail</a></li>
+                                    <li><a href="http://www.linkedin.com/in/gergelypolonkai" target="_blank"><img src="{{'/images/linkedin_16.png' | prepend: site.baseurl}}" alt="" /> LinkedIn</a></li>
+                                    <li><a href="skype:gergely.polonkai" target="_blank"><img src="{{'/images/skype_16.png' | prepend: site.baseurl}}" alt="" /> Skype</a></li>
+                                    <li><a href="http://facebook.com/Polesz" target="_blank"><img src="{{'/images/facebook_16.png' | prepend: site.baseurl}}" alt="" /> Facebook</a></li>
+                                    <li><a href="https://plus.google.com/+GergelyPolonkai/about" target="_blank"><img src="{{'/images/google_plus_16.png' | prepend: site.baseurl}}" alt="" /> Google+</a></li>
+                                    <li><a href="gtalk:chat?jid=gergely@polonkai.eu" target="_blank"><img src="{{'/images/googletalk_16.png' | prepend: site.baseurl}}" alt="" /> Hangouts</a></li>
+                                    <li><a href="http://twitter.com/GergelyPolonkai" target="_blank"><img src="{{'/images/twitter_16.png' | prepend: site.baseurl}}" alt="" /> Twitter</a></li>
+                                    <li><a href="http://gergelypolonkai.tumblr.com" target="_blank"><img src="{{'/images/tumblr_16.png' | prepend: site.baseurl}}" alt="" /> Tumblr</a></li>
+                                    <li><a href="http://gergelypolonkai.deviantart.com" target="_blank"><img src="{{'/images/deviantart_16.png' | prepend: site.baseurl}}" alt="" /> deviantArt</a></li>
+                                    <li><a href="{{'/blog/atom.xml' | prepend: site.baseurl}}"><img src="{{'/images/rss_16.png' | prepend: site.baseurl}}" alt="" /> RSS Feed</a></li>
                                 </ul>
                             </li>
                         </ul>
