--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="{{ page.keywords }}">
+        <meta name="keywords" content="{{page.keywords}}">
         <meta name="description" content="Personal page of Gergely Polonkai">
-        <title>Gergely Polonkai{% if page.title %}: {{ page.title }}{% endif %}</title>
+        <title>Gergely Polonkai{% if page.title %}: {{page.title}}{% endif %}</title>
 
-        <link rel="icon" type="image/x-icon" href="{{site_url}}/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="{{'/favicon.ico' | prepend: site.baseurl}}">
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic" rel="stylesheet" type="text/css">
         <link rel="alternate" type="application/rss+xml" title="Gergely Polonkai's Blog - RSS Feed" href="{{site.url}}/blog/atom.xml">
 
