--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,12 +3,13 @@ layout: default
 ---
 <div class="post">
 
-  <header class="post-header">
-    <h2>{{ page.title }}</h2>
+    <header class="post-header">
+        <h2>{{page.title}}</h2>
+        <div class="clearfix"></div>
   </header>
 
   <article class="post-content">
-  {{ content }}
+  {{content}}
   </article>
 
 </div>
