--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -17,7 +17,7 @@
 {% endif %}
                 </h3>
                 <div class="pull-left">
-                    Posted by : {{post.author.name}}
+                    {{post.author.name}}
                 </div>
                 <div class="pull-right">
                     {{post.date | date: "%b %-d, %Y :: %H:%M"}}
