--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 {% include head.html %}
     </head>
     <body>
-        <div class="container">
+        <div class="container" id="main-container">
 {% include header.html %}
 
             {{content}}
