Fix style of post metadata

--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -16,10 +16,10 @@
                     <div class="plusone-container"><div class="g-plusone" data-annotation="inline" data-size="small" data-width="300"></div></div>
 {% endif %}
                 </h3>
-                <div class="pull-left">
+                <div class="meta pull-left">
                     {{post.author.name}}
                 </div>
-                <div class="pull-right">
+                <div class="meta pull-right">
                     {{post.date | date: "%b %-d, %Y :: %H:%M"}}
                 </div>
                 <div class="clearfix"></div>
