--- a/css/style.sass
+++ b/css/style.sass
@@ -22,6 +22,13 @@ a
 #main-container
   background-color: $content-background
 
+article.post
+  div.meta
+    font-size: 80%
+    color: #aaa
+    margin-top: .8em
+    margin-bottom: .5em
+
 body
   background-color: $page-background
   margin: 0
