Move jumbotron so it’s main page only

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-            <div class="navbar navbar-inverse">
+            <div class="navbar navbar-inverse navbar-fixed-top">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#gp-navbar">
@@ -32,11 +32,4 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-
-            <div class="jumbotron">
-                <h1 class="text-right">
-                    Gergely Polonkai<br>
-                    <small>developer, systems engineer and administrator</small>
-                </h1>
             </div>
