--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,9 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="{{'/' | prepend: site.baseurl}}"><img src="{{'/images/profile.svg' | prepend: site.baseurl}}" alt="Gergely Polonkai" style="background-color: white; height: 45px; margin-top: -13px;"></a>
+{% if page.url != '/' %}
+                        <a class="navbar-brand" href="{{'/' | prepend: site.baseurl}}">Gergely Polonkai</a>
+{% endif %}
                     </div>
                     <div class="collapse navbar-collapse" id="gp-navbar">
                         <ul class="nav navbar-nav">
