--- a/css/style.sass
+++ b/css/style.sass
@@ -22,6 +22,9 @@ a
 #main-container
   background-color: $content-background
 
+.popover
+  max-width: 100%
+
 article.post
   div.meta
     font-size: 80%
@@ -352,39 +355,16 @@ body
     font-size: 50%
     color: #7f7f7f
     font-weight: normal
+    text-decoration: none
 
   #keywords-button:hover
     background-color: #4d4d4d
     color: #ffffff
     cursor: pointer
 
-  #keywords
-    position: absolute
-    top: 100px
-    left: 100px
-    font-size: 75%
-    background-color: #4d4d4d
-    color: #ffffff
-    text-align: justify
-    width: 50%
-    padding: .5em
-    border: 1px solid #f18137
-    z-index: 200
-    display: none
-
   .keyword-first-letter
     font-weight: bold
     color: #f18137
-
-  #keywords-close
-    width: 24px
-    height: 24px
-    background-image: url('../images/close.png')
-    z-index: 210
-    position: absolute
-    display: block
-    top: -13px
-    right: -13px
 
   .i
     font-style: italic
