--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -33,14 +33,17 @@
 {% endif %}
             </main>
 
+{% capture tagsize %}{{post.tags | size}}{% endcapture %}
+{% if tagsize != '0' %}
             <footer>
                 <p class="article-tags">
                     Tags:
-{% for tag in post.tags %}
-{%     include tag-link.html %}
-{% endfor %}
+{%     for tag in post.tags %}
+{%         include tag-link.html %}
+{%     endfor %}
                 </p>
             </footer>
+{% endif %}
 {% if page.post_listing %}
         </li>
     </ul>
