--- a/css/style.sass
+++ b/css/style.sass
@@ -64,6 +64,10 @@ article.post
     margin-top: .8em
     margin-bottom: .5em
 
+.gist-data
+  max-height: 300px
+  overflow: auto
+
 body
   background-color: $page-background
   margin: 50px 0 0 0
@@ -81,349 +85,6 @@ body
   #about-well-image
     img
       padding-right: 1em
-
-  .highlight
-    background-color: #fdf6e3
-    color: #586e75
-    padding: 10px
-
-    /* Line Numbers */
-    /* Make line numbers unselectable: excludes line numbers from */
-    /* copy-paste user ops */
-    .lineno
-      color: #93a1a1
-      -webkit-user-select: none
-      -moz-user-select: none
-      -o-user-select: none
-
-    .lineno::-moz-selection /* Mozilla specific */
-      background-color: transparent
-
-    .lineno::selection /* Other major browsers */
-      background-color: transparent
-
-    .code-title
-      text-indent: 0 !important
-      font-size: 120%
-      font-weight: bold
-
-    .code-description
-      border: 1px solid #333
-      background-color: #d9d9d9
-      padding: 3px
-      text-indent: 0 !important
-      margin: .5em 0 0 0 !important
-      font-size: 75%
-      color: #444
-
-    pre
-      font-family: monospace
-      padding: 5px
-      height: 300px
-      overflow: auto
-      color: #586e75
-
-      *
-        font-family: monospace
-        color: #586e75
-
-      code
-        /* Comment */
-        .c
-          color: #93a1a1
-          font-style: italic
-
-        /* Error */
-        .err
-          color: #586e75
-
-        /* Generic */
-        .g
-          color: #586e75
-
-        /* Keyword */
-        .k
-          color: #859900
-          font-weight: bold
-
-        /* Literal */
-        .l
-          color: #586e75
-
-        /* Name */
-        .n
-          color: #586e75
-
-        /* Operator */
-        .o
-          color: #859900
-          font-weight: bold
-
-        /* Other */
-        .x
-          color: #cb4b16
-
-        /* Punctuation */
-        .p
-          color: #586e75
-
-        /* Comment.Multiline */
-        .cm
-          color: #93a1a1
-          font-style: italic
-
-        /* Comment.Preproc */
-        .cp
-          color: #859900
-          font-weight: bold
-
-        /* Comment.Single */
-        .c1
-          color: #93a1a1
-          font-style: italic
-
-        /* Comment.Special */
-        .cs
-          color: #859900
-          font-weight: bold
-          font-style: italic
-
-        /* Generic.Deleted */
-        .gd
-          color: #2aa198
-          background-color: #ffdddd
-
-          /* Generic.Deleted.Specific */
-          .x
-            color: #000000
-            background-color: #ffaaaa
-
-        /* Generic.Emph */
-        .ge
-          color: #586e75
-          font-style: italic
-
-        /* Generic.Error */
-        .gr
-          color: #dc322f
-
-        /* Generic.Heading */
-        .gh
-          color: #cb4b16
-
-        /* Generic.Inserted */
-        .gi
-          color: #859900
-
-        /* Generic.Output */
-        .go
-          color: #586e75
-
-        /* Generic.Prompt */
-        .gp
-          color: #586e75
-
-        /* Generic.Strong */
-        .gs
-          color: #586e75
-          font-weight: bold
-
-        /* Generic.Subheading */
-        .gu
-          color: #cb4b16
-
-        /* Generic.Traceback */
-        .gt
-          color: #586e75
-
-        /* Keyword.Constant */
-        .kc
-          color: #cb4b16
-          font-weight: bold
-
-        /* Keyword.Declaration */
-        .kd
-          color: #268bd2
-          font-weight: bold
-
-        /* Keyword.Namespace */
-        .kn
-          color: #859900
-
-        /* Keyword.Pseudo */
-        .kp
-          color: #859900
-          font-weight: bold
-
-        /* Keyword.Reserved */
-        .kr
-          color: #268bd2
-          font-weight: bold
-
-        /* Keyword.Type */
-        .kt
-          color: #dc322f
-          font-weight: bold
-
-        /* Literal.Date */
-        .ld
-          color: #586e75
-
-        /* Literal.Number */
-        .m
-          color: #2aa198
-
-        /* Literal.String */
-        .s
-          color: #2aa198
-
-        /* Name.Attribute */
-        .na
-          color: #586e75
-
-        /* Name.Builtin */
-        .nb
-          color: #b58900
-
-        /* Name.Class */
-        .nc
-          color: #268bd2
-          font-weight: bold
-
-        /* Name.Constant */
-        .no
-          color: #cb4b16
-
-        /* Name.Decorator */
-        .nd
-          color: #268bd2
-
-        /* Name.Entity */
-        .ni
-          color: #cb4b16
-
-        /* Name.Exception */
-        .ne
-          color: #cb4b16
-          font-weight: bold
-
-        /* Name.Function */
-        .nf
-          color: #268bd2
-          font-weight: bold
-
-        /* Name.Label */
-        .nl
-          color: #586e75
-
-        /* Name.Namespace */
-        .nn
-          color: #586e75
-
-        /* Name.Other */
-        .nx
-          color: #586e75
-
-        /* Name.Property */
-        .py
-          color: #586e75
-
-        /* Name.Tag */
-        .nt
-          color: #268bd2
-
-        /* Name.Variable */
-        .nv
-          color: #268bd2
-
-        /* Operator.Word */
-        .ow
-          color: #859900
-
-        /* Text.Whitespace */
-        .w
-          color: #586e75
-
-        /* Literal.Number.Float */
-        .mf
-          color: #2aa198
-
-        /* Literal.Number.Hex */
-        .mh
-          color: #2aa198
-
-        /* Literal.Number.Integer */
-        .mi
-          color: #2aa198
-
-        /* Literal.Number.Oct */
-        .mo
-          color: #2aa198
-
-        /* Literal.String.Backtick */
-        .sb
-          color: #93a1a1
-
-        /* Literal.String.Char */
-        .sc
-          color: #2aa198
-
-        /* Literal.String.Doc */
-        .sd
-          color: #586e75
-
-        /* Literal.String.Double */
-        .s2
-          color: #2aa198
-
-        /* Literal.String.Escape */
-        .se
-          color: #cb4b16
-
-        /* Literal.String.Heredoc */
-        .sh
-          color: #586e75
-
-        /* Literal.String.Interpol */
-        .si
-          color: #2aa198
-
-        /* Literal.String.Other */
-        .sx
-          color: #2aa198
-
-        /* Literal.String.Regex */
-        .sr
-          color: #dc322f
-
-        /* Literal.String.Single */
-        .s1
-          color: #2aa198
-
-        /* Literal.String.Symbol */
-        .ss
-          color: #2aa198
-
-        /* Name.Builtin.Pseudo */
-        .bp
-          color: #268bd2
-
-        /* Name.Variable.Class */
-        .vc
-          color: #268bd2
-
-        /* Name.Variable.Global */
-        .vg
-          color: #268bd2
-
-        /* Name.Variable.Instance */
-        .vi
-          color: #268bd2
-
-        /* Literal.Number.Integer.Long */
-        .il
-          color: #2aa198
-
 
   #keywords-button
     font-size: 50%
