--- a/_includes/tag-link.html
+++ b/_includes/tag-link.html
@@ -1,1 +1,10 @@
-<a href="{{tag | prepend: '/blog/tag/' | prepend: site.baseurl}}" class="label label-default">{{tag}}</a>
+{% capture tagsize %}{{post.tags | size}}{% endcapture %}
+{% if tagsize != '0' %}
+            <footer>
+                <p class="article-tags">
+{%     for tag in post.tags %}
+                    <a href="{{tag | prepend: '/blog/tag/' | prepend: site.baseurl}}" class="tag-label">{{tag}}</a>
+{%     endfor %}
+                </p>
+            </footer>
+{% endif %}
