Replace image in bottom well with the SVG version

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
 {% if page.name != 'about.html' %}
             <div class="well well-sm small">
-                <div class="pull-left" id="about-well-image"><img src="{{'/images/profile.png' | prepend: site.baseurl}}" alt=""></div>
+                <div class="pull-left" id="about-well-image"><img src="{{'/images/profile.svg' | prepend: site.baseurl}}" alt=""></div>
 {%     include about.html %}
                 <div class="clearfix"></div>
             </div>
