--- a/css/style.sass
+++ b/css/style.sass
@@ -114,8 +114,15 @@ body
     margin-top: 20px
 
   #about-well-image
+    background-color: white
+    margin-right: 1em
+
     img
-      padding-right: 1em
+      width: 150px
+      background-color: white
+      border: 1px solid #000
+      margin: .5em
+      padding: 1em
 
   #keywords-button
     font-size: 50%
