Add about.me link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
                             <li><a href="{{'/resume' | prepend: site.baseurl}}">Resume</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
+                            <li><a href="https://about.me/gergely.polonkai">about.me</a></li>
                             <li><a href="{{'/disclaimer' | prepend: site.baseurl}}">Disclaimer</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-pencil"></span> Contact me <span class="caret"></span></a>
