Extend the about section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <p>
     Gergely Polonkai is a systems engineer of a telco company, and
-    also a freelancer developer.
+    also a freelancer self- and software developer.
 </p>
 
 <p>
@@ -17,4 +17,11 @@
     during work (oh my, yet another IT solutions blog), hoping they
     can help others with their job, or just to get along with their
     brand new netbook that shipped with Linux.
+</p>
+
+<p>
+    “I believe one can only achieve success if they follow their own
+    instincts and listen to, but not bend under others’ opinions. If
+    you change your course just because someone says so, you are
+    following their instincts, not yours.”
 </p>
