Fix blog post listing

--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -1,15 +1,15 @@
-<article class="{% if layout.post_listing %}col-sm-5 col-md-6 {% endif%}post">
-{% if layout.post_listing %}
+<article class="{% if page.post_listing %}col-sm-5 col-md-6 {% endif%}post">
+{% if page.post_listing %}
     <ul class="list-inline">
         <li class="col-md-8">
 {% endif %}
             <header class="post-header">
                 <h3>
-{% if layout.post_listing %}
+{% if page.post_listing %}
 <a href="{{post.url | prepend: site.baseurl}}">
 {% endif %}
 {{post.title}}
-{% if layout.post_listing %}
+{% if page.post_listing %}
 </a>
 {% endif %}
 {% if layout.render_post %}
