Fix navigation (pager) links in posts

--- a/_includes/tag-link.html
+++ b/_includes/tag-link.html
@@ -6,5 +6,6 @@
                     <a href="{{tag | prepend: '/blog/tag/' | prepend: site.baseurl}}" class="tag-label">{{tag}}</a>
 {%     endfor %}
                 </p>
+                <br class="clearfix">
             </footer>
 {% endif %}
