--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,10 +9,10 @@ render_post: true
 <nav>
     <ul class="pager">
 {% if page.previous %}
-        <li><a href="{{page.previous.url | prepend: site.baseurl}}">&larr; {{page.previous.title}}</a></li>
+        <li class="previous"><a href="{{page.previous.url | prepend: site.baseurl}}">&larr; {{page.previous.title}}</a></li>
 {% endif %}
 {% if page.next %}
-        <li><a href="{{page.next.url | prepend: site.baseurl}}">{{page.next.title}} &rarr;</a></li>
+        <li class="next"><a href="{{page.next.url | prepend: site.baseurl}}">{{page.next.title}} &rarr;</a></li>
 {% endif %}
     </ul>
 </nav>
