--- a/css/style.sass
+++ b/css/style.sass
@@ -95,6 +95,11 @@ article.post
     margin-top: .8em
     margin-bottom: .5em
 
+  img
+    max-width: 900px
+    margin: 0 auto
+    display: block
+
 .gist-data
   max-height: 300px
   overflow: auto
