--- a/css/style.sass
+++ b/css/style.sass
@@ -219,3 +219,9 @@ body
 
 blockquote
   font-size: 100%
+
+kbd
+  border: 1px solid black
+  background-color: #a9a9a9
+  color: black
+  padding: 5px
