--- a/css/style.sass
+++ b/css/style.sass
@@ -51,6 +51,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6
 a
   color: $link-color
 
+  code
+    text-decoration: underline
+
 #main-container
   background-color: $content-background
 
