--- a/css/style.sass
+++ b/css/style.sass
@@ -228,3 +228,9 @@ kbd
   background-color: #a9a9a9
   color: black
   padding: 5px
+
+h3.tag
+  text-transform: uppercase
+
+h5
+  font-weight: bold
