--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -5,7 +5,7 @@
                 <span aria-hidden="true">&laquo;</span>
             </a>
         </li>
-{% for page in (1...paginator.total_pages) %}
+{% for page in (1..paginator.total_pages) %}
         <li{% if paginator.page == page %} class="active"{% endif %}><a href="{% if page == 1 %}{{'/blog' | prepend: site.baseurl}}{% else %}{{site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page}}{% endif %}">{{page}}</a></li>
 {% endfor %}
         <li{% if paginator.next_page == null %} class="disabled"{% endif %}>
