--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
         <title>Gergely Polonkai{% if page.title %}: {{page.title}}{% endif %}</title>
 
         <link rel="icon" type="image/x-icon" href="{{'/favicon.ico' | prepend: site.baseurl}}">
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic" rel="stylesheet" type="text/css">
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic" rel="stylesheet" type="text/css">
         <link rel="alternate" type="application/rss+xml" title="Gergely Polonkai's Blog - RSS Feed" href="{{site.url}}/blog/atom.xml">
         {% if page.path == 'index.html' %}
         <link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud">
